--- a/.github/workflows/robot-workflow.yml
+++ b/.github/workflows/robot-workflow.yml
@@ -102,12 +102,12 @@ jobs:
         run: |
           cd rio && pipenv run python -m robotpy test -- -vs || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
 
-      - name:
-          Update Coverage Badge
-          # GitHub actions: default branch variable
-          # https://stackoverflow.com/questions/64781462/github-actions-default-branch-variable
-        # if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
-        uses: we-cli/coverage-badge-action@main
+      - name: Run Coverage
+        run: |
+          cd rio && pipenv run python -m robotpy coverage test && cp .coverage ../
+
+      - name: Update Coverage Badge
+        uses: tj-actions/coverage-badge-py@v2
 
       - name: Discord notification
         if: ${{ failure() }}
