add node_modules and .parcel-cache to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,6 @@ cython_debug/
 
 # Joe's not sure what this is for, put it back in the tree only if needed.
 networktables.json
+
+node_modules/
+.parcel-cache/
