Force repair @dublUayaychtee

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,10 @@ cython_debug/
 
 # Joe's not sure what this is for, put it back in the tree only if needed.
 networktables.json
+
+# ===========
+# Dashboard
+# ===========
+
+.parcel-cache/
+node_modules/
