--- a/rio/constants/robot_hardware.yaml
+++ b/rio/constants/robot_hardware.yaml
@@ -4,48 +4,46 @@
 # of arms, and similar should go here.
 
 drivetrain:
-  max_velocity: 1.5               # Updated Never by Nobody
-  encoderConversionFactor: 21.43  # Updated 1/27 by Joe
-
-  # All pose coordinates are in meters.
-  leftMotor:
-    Motor1Port: 2                # Updated 1/12 by Keegan
-    Motor2Port: 1                # Updated 1/12 by Keegan 
-    EncoderPorts: [2, 1]         # Updated 2/12 by Keegan
+  wheelRadius: 1.5               # Updated Never by Nobody
+  # cycles: 2048, counts: 8192 per revolution
+  encoderResolution: 2048        # Updated Never by Nobody
+  
+  FPMotors:
+    Motor1Port: 1                # Updated Never by Nobody
+    Motor2Port: 2                # Updated Never by Nobody
+    EncoderPorts: [1, 2]         # Updated Never by Nobody
     EncoderReversed: False       # Updated Never by Nobody
     Inverted: False              # Updated Never by Nobody
+    
+  APMotors:
+      Motor1Port: 3              # Updated Never by Nobody
+      Motor2Port: 4              # Updated Never by Nobody
+      EncoderPorts: [3, 4]       # Updated Never by Nobody
+      EncoderReversed: False     # Updated Never by Nobody
+      Inverted: False            # Updated Never by Nobody
 
-  rightMotor:
-    Motor1Port: 3                # Updated 1/8 by Keegan
-    Motor2Port: 4                # Updated 1/8 by Keegan
-    EncoderPorts: [3, 4]         # Updated Never by Nobody
-    EncoderReversed: True        # Updated Never by Nobody
-    Inverted: True               # Updated Never by Nobody
+  FSMotors:
+    Motor1Port: 5                # Updated Never by Nobody
+    Motor2Port: 6                # Updated Never by Nobody
+    EncoderPorts: [5, 6]         # Updated Never by Nobody
+    EncoderReversed: False       # Updated Never by Nobody
+    Inverted: False              # Updated Never by Nobody
+    
+  ASMotors:
+      Motor1Port: 7                # Updated Never by Nobody
+      Motor2Port: 8                # Updated Never by Nobody
+      EncoderPorts: [7, 8]         # Updated Never by Nobody
+      EncoderReversed: False       # Updated Never by Nobody
+      Inverted: False              # Updated Never by Nobody
 
-  navX: # NavX ids
-    can_id: 0                    # Updated 1/13 by Keegan
-    yaw: 0                       # Updated 1/13 by Keegan
-    pitch: 0                     # Updated 1/13 by Keegan
-    roll: 0                      # Updated 1/13 by Keegan
+  DrivePIDValues:
+    P: 0                           # Updated Never by Nobody
+    I: 0                           # Updated Never by Nobody
+    D: 0                           # Updated Never by Nobody
+    FF: 0                          # Updated Never by Nobody
 
-arm:
-  elevatorMotor: # Drives the spool to move the lift in and out
-    MotorPort: 5                 # Updated 1/22 by Keegan
-    Inverted: False              # Updated 1/22 by Keegan
-    LimitSwitch: 0               # Updated 2/15 by Keegan
-    ConversionFactor: 1          # Updated 1/18 by Joe
-    Start: 0                     # Updated 3/18 by Keegan
-
-  ladderMotor: # Drives the lead screw to run the lift up and down
-    MotorPort: 6             # Updated 1/22 by Keegan
-    Inverted: False          # Updated 1/22 by Keegan
-    ConversionFactor: 1      # Updated 1/18 by Joe
-    Start: 55                # Updated 3/18 by Keegan
-
-
-
-claw:
-  MotorPort: 7             # Updated 1/22 by Keegan
-  Inverted: False          # Updated 1/22 by Keegan
-  EncoderPorts: 7          # Updated 2/11 by Keegan
-  EncoderReversed: False   # Updated 1/22 by Keegan
+  TurnPIDValues:
+    P: 0                           # Updated Never by Nobody
+    I: 0                           # Updated Never by Nobody
+    D: 0                           # Updated Never by Nobody
+    FF: 0                          # Updated Never by Nobody
