--- a/rio/constants/robot_hardware.yaml
+++ b/rio/constants/robot_hardware.yaml
@@ -7,6 +7,9 @@ drivetrain:
   wheelRadius: 1.5               # Updated Never by Nobody
   # cycles: 2048, counts: 8192 per revolution
   encoderResolution: 2048        # Updated Never by Nobody
+  # TODO fix these (there in amps)
+  DriveMotorCurrentLimit: 50
+  TurnMotorCurrentLimit: 20
   
   FPMotors:
     drivePort: 1                 # Updated Never by Nobody
@@ -41,9 +44,28 @@ drivetrain:
     I: 0                           # Updated Never by Nobody
     D: 0                           # Updated Never by Nobody
     FF: 0                          # Updated Never by Nobody
+    MinOutput: -1
+    MaxOutput: 1
 
   TurnPIDValues:
     P: 0                           # Updated Never by Nobody
     I: 0                           # Updated Never by Nobody
     D: 0                           # Updated Never by Nobody
     FF: 0                          # Updated Never by Nobody
+    MinOutput: -1
+    MaxOutput: 1
+
+  Conversions:
+    # see rev's maxswervemodule code for how numbers were
+    # obtained https://github.com/robotpy/robotpy-rev/tree/main/examples/maxswerve
+    Drive:
+      MotorPositionFactor: 289.070303031
+      EncoderVelocityFactor: 17344.2181818
+      
+
+    Turn:
+      EncoderPositionFactor: 6.28
+      EncoderVelocityFactor: 0.104666666667
+      EncoderPositionPIDMinInput: 0
+      EncoderPositionPIDMaxInput: 6.28
+      
