--- a/rio/constants/robot_hardware.yaml
+++ b/rio/constants/robot_hardware.yaml
@@ -3,6 +3,8 @@
 # Motor placement, max and min extensions
 # of arms, and similar should go here.
 
+# TODO change all TODO values to be for our swerve
+
 drivetrain:
   wheelRadius: 1.5               # Updated Never by Nobody
   # cycles: 2048, counts: 8192 per revolution
@@ -10,6 +12,10 @@ drivetrain:
   # TODO fix these (there in amps)
   DriveMotorCurrentLimit: 50
   TurnMotorCurrentLimit: 20
+  # TODO change in % per seconds
+  MagnitudeSlewRate: 1.8
+  # TODO change me in % per seconds
+  RotationalSlewRate: 2
   
   FPMotors:
     drivePort: 1                 # Updated Never by Nobody
