--- a/rio/constants/robotHardware.yaml
+++ b/rio/constants/robotHardware.yaml
@@ -1,25 +1,51 @@
 # There are four swerve modules that make up a drivetrain
-modules:
-  frontRight:
-    CANSteerID: 0 # Configured Never
-    CANDriveID: 1 # Configured Never
-    Pose: [1, 1] # Configured Never
-  frontLeft:
-    CANSteerID: 2 # Configured Never
-    CANDriveID: 3 # Configured Never
-    Pose: [-1, 1] # Configured Never
-  rearRight:
-    CANSteerID: 4 # Configured Never
-    CANDriveID: 5 # Configured Never
-    Pose: [1, -1] # Configured Never
-  rearLeft:
-    CANSteerID: 6 # Configured Never
-    CANDriveID: 7 # Configured Never
-    Pose: [-1, -1] # Configured Never
+swerve:
+  modules:
+    frontLeft:
+      CANSteerID: 2 # Configured Never by Nobody
+      CANDriveID: 3 # Configured Never by Nobody
+      Pose: [-1, 1] # Configured Never by Nobody
+    frontRight:
+      CANSteerID: 0 # Configured Never by Nobody
+      CANDriveID: 1 # Configured Never by Nobody
+      Pose: [1, 1] # Configured Never by Nobody
+    rearLeft:
+      CANSteerID: 6 # Configured Never by Nobody
+      CANDriveID: 7 # Configured Never by Nobody
+      Pose: [-1, -1] # Configured Never by Nobody
+    rearRight:
+      CANSteerID: 4 # Configured Never by Nobody
+      CANDriveID: 5 # Configured Never by Nobody
+      Pose: [1, -1] # Configured Never by Nobody
+  # General constants all modules share
 
-# ============================
-# Old stuff joe isn't touching
-# ============================
+  # These are important translation factors to convert native units to m/s, do not leave at 1!
+  drivePosConversionFactor: 1 # Drive motor conversion factor (position)
+  driveVelConversionFactor: 1 # Drive motor conversion factor (velocity)
+  steerPosConversionFactor: 1 # Drive motor conversion factor (position)
+  steerVelConversionFactor: 1 # Drive motor conversion factor (velocity)
+
+  kWheelDiameterMeters: 0.0762 # Configured Never by Nobody
+
+  # Swerve PID
+  minimumPIDInput: 5 # Configured Jan 16 by Joe
+
+  kDrivingP: 0
+  kDrivingI: 0
+  kDrivingD: 0
+  kDrivingFF: 0 # Was configured in complexConstants.py, might need to do that again!
+  kDrivingMinOutput: -1
+  kDrivingMaxOutput: 1
+
+  kTurningP: 2.65
+  kTurningI: 0.012
+  kTurningD: 1.5
+  kTurningFF: 0
+  kTurningMinOutput: -1
+  kTurningMaxOutput: 1
+
+  kDrivingMotorCurrentLimit: 150
+  kTurningMotorCurrentLimit: 50
 
 neo:
   kFreeSpeedRpm: 5676
@@ -34,25 +60,4 @@ drive:
   kTrackWidth: 0.6731
   kWheelBase: 0.6731
 
-  # SPARK MAX CAN IDs
-  kFrontLeftDrivingCanId: 11
-  kRearLeftDrivingCanId: 13
-  kFrontRightDrivingCanId: 15
-  kRearRightDrivingCanId: 17
-
-  kFrontLeftTurningCanId: 10
-  kRearLeftTurningCanId: 12
-  kFrontRightTurningCanId: 14
-  kRearRightTurningCanId: 16
-
   kGyroReversed: False
-
-module:
-  kDrivingMotorPinionTeeth: 14
-
-  kTurningEncoderInverted: True
-
-  kWheelDiameterMeters: 0.0762
-
-  kDrivingMotorCurrentLimit: 50
-  kTurningMotorCurrentLimit: 20
