--- a/.github/workflows/robot-workflow.yml
+++ b/.github/workflows/robot-workflow.yml
@@ -74,38 +74,38 @@ jobs:
         with:
           args: "<@614313406345904148> Simulator failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
 
-  unit_test:
-    name: pyfrc Unit tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.11"
+  # unit_test:
+  #   name: pyfrc Unit tests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-python@v2
+  #       with:
+  #         python-version: "3.11"
 
-      - name: Install pipenv
-        run: |
-          python -m pip install --upgrade pipenv wheel
+  #     - name: Install pipenv
+  #       run: |
+  #         python -m pip install --upgrade pipenv wheel
 
-      - id: cache-pipenv
-        uses: actions/cache@v3
-        with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-pipenv-${{ hashFiles('rio/Pipfile.lock') }}
+  #     - id: cache-pipenv
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: ~/.local/share/virtualenvs
+  #         key: ${{ runner.os }}-pipenv-${{ hashFiles('rio/Pipfile.lock') }}
 
-      - name: Install dependencies
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
-        run: |
-          cd rio && pipenv install --deploy --dev
+  #     - name: Install dependencies
+  #       if: steps.cache-pipenv.outputs.cache-hit != 'true'
+  #       run: |
+  #         cd rio && pipenv install --deploy --dev
 
-      - name: Run unit tests
-        run: |
-          cd rio && pipenv run python -m robotpy test -- -vs || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
+  #     - name: Run unit tests
+  #       run: |
+  #         cd rio && pipenv run python -m robotpy test -- -vs || code=$?; if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi
 
-      - name: Discord notification
-        if: ${{ failure() }}
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        uses: Ilshidur/action-discord@master
-        with:
-          args: "<@614313406345904148> Unit tests failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
+  #     - name: Discord notification
+  #       if: ${{ failure() }}
+  #       env:
+  #         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+  #       uses: Ilshidur/action-discord@master
+  #       with:
+  #         args: "<@614313406345904148> Unit tests failed in {{ EVENT_PAYLOAD.pull_request.html_url }} !"
