this is dumb, CANSparkMaxLowLevel is deepricated now so CANSparkLowLevel. This messes with the Pipfile install so all packages should be installed manually.

--- a/rio/Makefile
+++ b/rio/Makefile
@@ -23,11 +23,11 @@ push:	## Deploy to the robot (push only, no console)
 
 
 download:	## Download robot requirements locally
-	robotpy-installer download -r robot_requirements.txt
+	python -m robotpy installer download -r robot_requirements.txt
 
 
 install:	## Install requirements, run download first!
-	robotpy-installer install -r robot_requirements.txt
+	python -m robotpy installer install -r robot_requirements.txt
 
 
 info:	## Shortcut to get information about the code already on the bot
