--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -4,10 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-robotpy = {extras = ["rev", "ctre", "commands2", "navx"]}
 wpilib = {extras = ["all"]}
 pyyaml = "6.0"
 black = "*"
+robotpy = "2024.1.1.3"
+robotpy-rev = "2024.2.0"
+robotpy-ctre = "*"
+robotpy-navx = "*"
 
 [dev-packages]
 black = "*"
