--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -5,18 +5,13 @@ name = "pypi"
 
 [packages]
 wpilib = {extras = ["all"]}
-pyyaml = "6.0"
-black = "*"
-robotpy = "2024.1.1.3"
+robotpy = "2024.1.1.1"
 robotpy-rev = "2024.2.0"
 robotpy-ctre = "*"
 robotpy-navx = "*"
+robotpy-commands-v2 = "2024.0.0b4"
 
 [dev-packages]
-black = "*"
 
 [requires]
 python_version = "3.11"
-
-[pipenv]
-allow_prereleases = true
