--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -25,7 +25,7 @@ jobs:
               run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
 
             - name: Install npm deps
-              run: cd dashboard && npm ci
+              run: cd ../dashboard && npm ci
 
             - id: cache-pipenv
               uses: actions/cache@v3
