--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -2,9 +2,9 @@ name: Makefile CI
 
 on:
     push:
-        branches: ["main"]
+        branches: ["feat/dashboard"]
     pull_request:
-        branches: ["main"]
+        branches: ["feat/dashboard"]
 
 jobs:
     make_dashboard:
