--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -24,8 +24,8 @@ jobs:
             - name: Install NPM
               run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
 
-            - run: dir
-            
+            - run: ls
+
             - name: Install npm deps
               run: cd dashboard && npm ci
 
