--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -24,10 +24,8 @@ jobs:
             - name: Install NPM
               run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
 
-            - run: ls
-
             - name: Install npm deps
-              run: cd dashboard && npm ci
+              run: cd 1721-Crescendo/dashboard && npm ci
 
             - id: cache-pipenv
               uses: actions/cache@v3
