--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -2,7 +2,7 @@ name: Makefile CI
 
 on:
     push:
-        branches: ["feat/dashboard"]
+        branches: ["*"]
     pull_request:
         branches: ["feat/dashboard"]
 
