--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -24,6 +24,9 @@ jobs:
             - name: Install NPM
               run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
 
+            - name: go to ~
+              run: cd ~
+
             - name: Install npm deps
               run: cd dashboard && npm ci
 
