--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -24,8 +24,7 @@ jobs:
             - name: Install NPM
               run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
 
-            - name: go to ~
-              run: cd ~
+            - run: pwd | xargs echo $(exit)
 
             - name: Install npm deps
               run: cd dashboard && npm ci
