--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -24,7 +24,7 @@ jobs:
             - name: Install NPM
               run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
 
-            - run: cd .. && pwd | xargs echo $(find 1721-Crescendo)
+            - run: cd .. && pwd | xargs echo $(find 1721-Crescendo/dashboard)
 
             - name: Install npm deps
               run: cd dashboard && npm ci
