--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -24,6 +24,8 @@ jobs:
             - name: Install NPM
               run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
 
+
+            - run: cd 1721-Crescendo
             - run: pwd | xargs echo $(ls -l)
 
             - name: Install npm deps
