--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -24,9 +24,9 @@ jobs:
             - name: Install NPM
               run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
 
-            - name: debug
-              run: cd 1721-Crescendo
-              run: pwd | xargs echo $(ls -l)
+            - run: cd 1721-Crescendo
+            
+            - run: pwd | xargs echo $(ls -l)
 
             - name: Install npm deps
               run: cd dashboard && npm ci
