--- a/.github/workflows/dashboard-workflow.yml
+++ b/.github/workflows/dashboard-workflow.yml
@@ -24,7 +24,8 @@ jobs:
             - name: Install NPM
               run: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
             
-            - run: pwd | xargs echo $(ls)
+            # - run: pwd | xargs echo $(ls)
+            - run: cd 1721-Crescendo
 
             - name: Install npm deps
               run: cd dashboard && npm ci
