Editing Note follow commands and adding comments and such

--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -10,6 +10,7 @@ robotpy-rev = "2024.2.0"
 robotpy-ctre = "2024.1.1"
 robotpy-navx = "2024.1.0"
 robotpy-commands-v2 = "2024.2.1"
+numpy = "1.26.4"
 
 [dev-packages]
 
