--- a/rio/pyproject.toml
+++ b/rio/pyproject.toml
@@ -6,7 +6,7 @@
 [tool.robotpy]
 
 # Version of robotpy this project depends on
-robotpy_version = "2024.3.1.0"
+robotpy_version = "2024.3.2.1"
 
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
@@ -16,7 +16,7 @@ robotpy_extras = [
     "commands2",
     # "cscore",
     # "navx",
-    # "pathplannerlib",
+    "pathplannerlib",
     "phoenix5",
     # "phoenix6",
     # "playingwithfusion",
