--- a/rio/Pipfile
+++ b/rio/Pipfile
@@ -11,6 +11,7 @@ robotpy-ctre = "2024.1.3"
 robotpy-commands-v2 = "2024.3.1"
 robotpy-pathplannerlib ="2024.2.7"
 numpy = "1.26.4"
+pipfile = "*"
 
 [dev-packages]
 
